[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/InstanceDock/InstanceDock.gd" type="Script" id=2]

[node name="Instances" type="PanelContainer"]
anchor_bottom = 1.0
margin_right = 350.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 593.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 336.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Tabs" type="Tabs" parent="VBoxContainer/HBoxContainer"]
margin_right = 312.0
margin_bottom = 24.0
size_flags_horizontal = 3
tab_align = 0
tab_close_display_policy = 1
drag_to_rearrange_enabled = true

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 316.0
margin_right = 336.0
margin_bottom = 24.0
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 336.0
margin_bottom = 586.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 336.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 336.0
size_flags_horizontal = 3
columns = 5

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 336.0
margin_bottom = 18.0
text = "Add tab to continue"
autowrap = true

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 22.0
margin_right = 336.0
margin_bottom = 36.0
text = "Drag scene from file system on a slot to assign"
autowrap = true

[node name="Control" type="Control" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 593.0
mouse_filter = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Control"]
visible = true
margin_left = 488.0
margin_top = 113.0
margin_right = 721.0
margin_bottom = 195.0
window_title = "Remove tab"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
text = "This will permanently remove the tab. Continue?"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog2" type="ConfirmationDialog" parent="Control"]
visible = true
margin_left = 518.0
margin_top = 443.0
margin_right = 718.0
margin_bottom = 513.0
window_title = "Add new tab"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Control/ConfirmationDialog2"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 34.0
placeholder_text = "Tab name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
transparent_bg = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[connection signal="tab_changed" from="VBoxContainer/HBoxContainer/Tabs" to="." method="on_tab_changed"]
[connection signal="tab_close" from="VBoxContainer/HBoxContainer/Tabs" to="." method="on_tab_close_attempt"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="on_add_tab_pressed"]
[connection signal="confirmed" from="Control/ConfirmationDialog" to="." method="remove_tab_confirm"]
[connection signal="confirmed" from="Control/ConfirmationDialog2" to="." method="add_tab_confirm"]
[connection signal="text_entered" from="Control/ConfirmationDialog2/LineEdit" to="." method="add_tab_confirm"]
